--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,16 +1,9 @@
-<mvc:View
-    controllerName="assembler.com.mx.onchangetraffic.controller.App"
-    xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true"
-    xmlns="sap.m"
->
-    <Shell id="shell">
-        <App id="app">
-            <pages>
-                <Page id="page" title="{i18n>title}">
-                    <content />
-                </Page>
-            </pages>
-        </App>
-    </Shell>
-</mvc:View>
+<core:View xmlns:core="sap.ui.core" 
+	xmlns:mvc="sap.ui.core.mvc"
+	displayBlock="true"
+	xmlns="sap.m">
+	<App id="app">
+	<!-- pages will be filled automatically via routing -->
+    </App>
+</core:View>
+
