--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,12 +1,27 @@
+.largeIcon:before {
+  width:3rem;
+  height:3rem;
+  font-size:1.5rem
+}
+
 .greenIcon:before {
-    color: green;
-  }
+  color: green; 
+  width:3rem;
+  height:3rem;
+  font-size:1.5rem
+}
 
 .yellowIcon:before {
     color: yellow;
+    width:3rem;
+    height:3rem;
+    font-size:1.5rem
   }
 
 .redIcon:before {
     color: red;
-  }
-  
+    width:3rem;
+    height:3rem;
+    font-size:1.5rem
+}
+
